--- a/pom.xml
+++ b/pom.xml
@@ -21,5 +21,13 @@
       <version>3.8.1</version>
       <scope>test</scope>
     </dependency>
+    
+	<!-- http://mvnrepository.com/artifact/commons-codec/commons-codec -->
+	<dependency>
+	    <groupId>commons-codec</groupId>
+	    <artifactId>commons-codec</artifactId>
+	    <version>1.6</version>
+	</dependency>
+
   </dependencies>
 </project>
