--- a/pom.xml
+++ b/pom.xml
@@ -22,12 +22,11 @@
       <scope>test</scope>
     </dependency>
     
-	<!-- http://mvnrepository.com/artifact/commons-codec/commons-codec -->
-	<dependency>
-	    <groupId>commons-codec</groupId>
-	    <artifactId>commons-codec</artifactId>
-	    <version>1.6</version>
+     <dependency>
+    <groupId>org.bouncycastle</groupId>
+    <artifactId>bcpkix-jdk15on</artifactId>
+    <version>1.50</version>
 	</dependency>
-
+	
   </dependencies>
 </project>
